<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">
    <!--顶部-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#42adff">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_lock_flag" />

        <ImageView
            android:id="@+id/open_device_permission"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:src="@drawable/icon_close_lock"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_one_lock"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/protect_electric"
            android:textColor="#badffc"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp" />
    </LinearLayout>
    <!--悬浮窗-->
    <LinearLayout
        android:id="@+id/float_window_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/float_window"
                android:textSize="16sp"
                android:textColor="@color/common_text_color"
                android:paddingLeft="20dp"
                android:paddingBottom="2dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:gravity="top"
                android:paddingTop="2dp"
                android:text="@string/click_float_window_lock_screen"
                android:textSize="14sp"
                android:textColor="#999999"
                android:paddingLeft="20dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/image_switch_status"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:src="@drawable/icon_switch_off"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#ebebeb"></View>
    <!--禁用一键锁屏-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/disable_lock_layout"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="80dp"
            android:text="@string/disable_one_key_lock"
            android:textColor="@color/common_text_color"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:paddingLeft="20dp" />

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:src="@drawable/icon_arrow_selector"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="30dp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#ebebeb"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="15dp"
        android:paddingTop="15dp">

        <ImageView
            android:id="@+id/left_icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/icon_dida_lock"
            android:layout_marginLeft="15dp" />

        <LinearLayout
            android:id="@+id/download_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:focusable="true"
            android:clickable="true">

            <com.yy.only.onekey.view.RedDotTextView
                android:id="@+id/top_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dida_lock_text"
                android:layout_toRightOf="@+id/left_icon"
                android:layout_centerVertical="true"
                android:textSize="16sp"
                android:textColor="@color/common_text_color"
                android:paddingBottom="2dp" />

            <TextView
                android:id="@+id/text_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dida_artifact"
                android:layout_toRightOf="@+id/left_icon"
                android:layout_alignBottom="@+id/top_text"
                android:textSize="14sp"
                android:paddingTop="2dp"
                android:textColor="#999999" />

            <LinearLayout
                android:id="@+id/progress_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/current_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/left_icon"
                    android:layout_alignBottom="@+id/top_text"
                    android:textSize="14sp"
                    android:paddingTop="2dp"
                    android:textColor="#52b7ff" />

                <com.yy.only.onekey.view.ProgressView
                    android:layout_width="match_parent"
                    android:layout_height="3.8dp"
                    android:id="@+id/progress"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="15dp" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/image_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_download_pressed"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.6dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#ebebeb"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/lock_screen_at_once"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="立即锁屏"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:clickable="true"
            android:textSize="17sp"
            android:background="@drawable/button_background_enable_selector"
            android:textColor="@color/button_text_color" />
    </LinearLayout>

</LinearLayout>
